gccida/g1/requires_inout
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/requires_inout/src/local-alloc.c:2980:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
for ( ; ( sch_istable[*( unsigned __int8 *)v2] & 4) != 0; ++v2 ) 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/requires_inout/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/requires_inout/src/obj/local-alloc.o] Error 1
